# baldor

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
doc/: conf.py  index.rst  reference.rst
src/baldor/: __init__.py  axis_angle.py  euler.py  quaternion.py  transform.py  vector.py
tests/: test_axis_angle.py  test_euler.py  test_quaternion.py  test_transform.py  test_vector.py
