<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>baldor</name>
    <version>0.1.3</version>
    <description>The baldor package</description>

    <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
    <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
    <license>BSD 3-Clause</license>
    <url type="website">http://wiki.ros.org/baldor</url>
    <url type="repository">https://github.com/crigroup/baldor</url>
    <url type="bugtracker">https://github.com/crigroup/baldor/issues</url>

    <exec_depend>python3-numpy</exec_depend>

    <doc_depend>rosdoc_lite</doc_depend>

    <export>
        <rosdoc config="rosdoc.yaml"/>
        <build_type>ament_python</build_type>
    </export>

</package>
